# techno-viewer

./: .env.example  .gitignore  README.md  USAGE.md  cad-viewer-iframe.html  index.html  package-lock.json  package.json  sample_request.sh  tsconfig.json  vite.config.ts
.claude/: settings.json  techno-viewer-skills.md  techno-viewer-system-prompt.txt
.github/workflows/: deploy-cloudflare.yml  deploy-github-pages.yaml  release-rencrypt.yml
agro-crypt/: LICENSE.md  Makefile  README.md  agro-crypt.h  agro-crypto.c  agro-crypto.h  agro-qrcode.c  main.c
drawings/en/: test.dxf
functions/api/: common.ts  file-viewed.js  file-viewed.ts  files-downloading.js  files-downloading.ts  types.ts
keys/private/: user001.key  user002.key  user003.key  user004.key  user005.key
keys/public/: user001.pub  user002.pub  user003.pub  user004.pub  user005.pub
public/: .gitignore  404.html  _headers  _redirects  files.json.age
rencrypt/: .gitignore  Cargo.toml  README.md
rencrypt/src/: age_crypto.rs  cli.rs  code_index.rs  extract.rs  file_tree.rs  hash.rs  keys.rs  lib.rs  main.rs  manifest.rs  output.rs  translate.rs
rencrypt/tests/: cli.rs  manifest_structure.rs
schematics/en/: BMS_Buck-Boost.dxf
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/context/: AuthContext.tsx
src/demo/: arduino.ts
src/hooks/: useAgeDecrypt.ts  useAuth.ts  useDocumentViewerLogic.ts  useFileTree.ts
src/i18n/: index.ts
src/iframe/: cad-viewer-main.ts
src/pages/: Contact.tsx  (+5 more)
tools/: README.md  ai_client.py  dxf2pdf.py  extract.py  generate.py  translate_cn.py  translate_en.py
(+21 files in other folders)
