[package]
name = "rencrypt"
version = "0.4.0"
edition = "2024"
rust-version = "1.91.1"
description = "Pure Rust AGE key generation and file tree encryption tool with tree-sitter integration."
license = "MIT OR Apache-2.0"

[dependencies]
age = "0.11.3"
anyhow = "1.0.100"
aes = "0.8.4"
base64 = "0.22.1"
cbc = "0.1.2"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.2"
dxf = "0.6.1"
pbkdf2 = "0.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.12"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting"] }
walkdir = "2.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter = "0.26.8"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.23.0"

[[bin]]
name = "rencrypt"
path = "src/main.rs"
